assets/css/styles.css
:root {
    --red: #FF2F2F;
	--blue: #0F2F56;
    --white: #FFFFFF;
	--grey: #F5F5F5;
    --darkred: #AC2D2D;
    --lowOpacityWhite: rgba(255, 255, 255, 0.600);
    --black: #000000;
}

@font-face {
    font-family: Audiowide;
    src: url('../Audiowide-Regular.ttf') format("truetype");
}

@font-face {
    font-family: Raleway Regular;
    src: url('../Raleway-Regular.ttf') format("truetype");
}

@font-face {
    font-family: Raleway Bold;
    src: url('../Raleway-Bold.ttf') format("truetype");
}

@font-face {
    font-family: Roboto Light;
    src: url('../Roboto-Light.ttf') format("truetype");
}

@font-face {
    font-family: Roboto Bold;
    src: url('../Roboto-Bold.ttf') format("truetype");
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--white);
    font-family: "Raleway Regular", Verdana, Tahoma;
}

p {
    hyphens: auto;
}

.bold {
    font-family: "Raleway Bold", Verdana, Tahoma;
}

.robotolight {
    font-family: "Roboto Light", Verdana, Tahoma;
}

.robotobold {
    font-family: "Roboto Bold", Verdana, Tahoma;
}

header {
    margin: 0;
    padding: 0;
    height: 60px;
    width: 100%;
    display: block;
    background: var(--lowOpacityWhite);
}

header nav {
    margin: 0 80px;
}

header nav ul {
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
}

header nav ul li {
    list-style-type: none;
}

header nav ul li a img {
    width: 15vw;
}

.navFlex {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}

.navFlex a {
    margin-left: 5vw;
    text-decoration: none;
    text-transform: uppercase;
    color: var(--blue);
    font-weight: 900;
}

.navFlex a:hover {
    text-decoration: underline;
}

#navIkon {
    display: none;
}

#navIkon2 {
    display: none;
    font-size: 35px;
}

.dropdownMobile {
    font-size: 25px;
    display: hidden;
}

.dropdownMobile li {
    padding: 20px 0;
    text-align: center;
    text-transform: uppercase;
    color: var(--darkbrown);
    display: hidden;
}

.dropdownMobile li:hover {
    text-decoration: underline;
}

#navMobile {
    display: none;
    color: none;
}

@media screen and (max-width: 812px) {
    .navFlex {
        display: none;
    }

    #navMobile {
        display: none;
        color: var(--darkbrown);
    }

    #navIkon {
        font-size: 25px;
        display: block;
    }
}

@media screen and (min-width: 813px) and (max-width: 1200px) {
    .navFlex {
        display: none;
    }

    #navMobile {
        display: none;
    }

    #navIkon {
        font-size: 27px;
        display: block;
    }
}

/* FRONTPAGE */
#myVideo {
    position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
    z-index: 0;
}

.frontpage .text {
    margin: 0 100px;
    position: fixed;
    top: 32vh;
    color: whitesmoke;
}

.frontpage h1 {
    font-family: "Audiowide", Verdana, Tahoma;
    font-size: 80px;
    margin: 0;
}

.frontpage p {
    font-size: 20px;
    width: 450px;
    line-height: 2;
}

.frontpage .icons {
    color: var(--lowOpacityWhite);
    font-size: 40px;
    display: flex;
    flex-direction: row;
    position: fixed;
    top: 90vh;
    left: 78vw;
    z-index: 3;
}

.frontpage .icons a {
    text-decoration: none;
    color: var(--lowOpacityWhite);
}

.frontpage .icons i {
    margin: 0 0 0 20px;
    transition: 1s;
}

.frontpage .icons i:hover {
    color: var(--white);
}

.frontpage .icons img {
    width: 40px;
    height: 40px;
    margin: 0 0 0 20px;
    opacity: 0.6;
    transition: 1s;
}

.frontpage .icons img:hover {
    opacity: 1;
}

.frontpage button {
    background-color: var(--red);
    color: whitesmoke;
    padding: 20px 50px;
    margin: 30px 0;
    border-radius: 40px;
    border: none;
    cursor: pointer;
    transition: 1s;
}

.frontpage button:hover {
    background-color: var(--darkred);
}

/* SVG */
svg {
    width: 800px;
    overflow: hidden;
}

#illustration {
    padding-top: 50px;
    position: absolute;
    transform: translateX(50vw);
}

/* FOOTER */
footer {
    background-color: white;
    text-align: center;
}

footer .flex {
    display: flex;
    justify-content: space-evenly;
    align-items: baseline;
    background-color: var(--grey);
    color: var(--blue);
    padding: 10px 0 20px 0;
}

footer .flex section {
    display: flex;
    flex-direction: column;
}

footer .flex section:nth-child(odd) {
    align-items: baseline;
}

footer .flex section:nth-child(even) {
    align-items: center;
}

footer .flex section:nth-child(3) p {
    margin: 5px 0;
}

footer .icons a {
    list-style: none;
    text-decoration: none;
}

footer .icons img {
    width: 40px;
    height: 40px;
    margin: 10px 25px;
}

footer button {
    width: 200px;
    padding: 15px;
    background-color: var(--darkred);
    color: var(--white);
    border: none;
    border-radius: 40px;
}

/* BACKGROUND */
.background {
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 40vh;
}

.contact .background {
    background-image: url('/assets/images/kort.png');
}

.leasing .background {
    background-image: url('/assets/images/leasing.png');
    background-position: 0% 30%;
}

.cars .background {
    background-image: url('/assets/images/miso.JPG');
}


/* CONTACT */
.contact main {
    margin: 50px 100px;
    display: grid;
    gap: 25px;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
}

.contact main article h2 {
    margin: 0;
}

.contact main article:nth-child(1) {
    background-color: var(--blue);
    color: white;
    padding: 25px;
    line-height: 2;
    border-radius: 5px;
}

.contact main article h1 {
    margin: 0;
    color: var(--blue);
}

.contact main article:nth-child(2) {
    line-height: 2;
}

.contactGrid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

.contactGrid h3 {
    margin: 0 0 10px 0;
    color: var(--blue);
}

.contactGrid a {
    color: var(--black);
    text-decoration: none;
    list-style: none;
}

.contactGrid p {
    margin: 0;
}

.contactGrid section:nth-child(4) img {
    width: 40px;
    height: 40px;
    margin: 20px 20px 0 0;
}

.owners {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 50px;
}

.owners section img {
    width: 150px;
    height: 150px;
    object-fit: cover;
    border-radius: 50%;
}

.owners section h2 {
    color: var(--white);
}

.owners section {
    display: flex;
    flex-direction: column;
}

